# -

./: .clang-format  .gitignore  BmpDecoder.c  BmpDecoder.h  BmpEncoder.c  BmpEncoder.h  CMakeLists.txt  Makefile  Mat.c  Mat.h  README.md  base.h  bmp.c  bmp.h  bmpHEADER.h  bmp_core.h  color.c  color.h  color_rgb.c  core.h  histogram.c  imgcodecs.h  imgproc.h  loadsave.c  main  main.c  main.cxx  mat.c  mat.h  minmax.c  openHL.h  split.c
include/openHL/: core.h  core.hxx  imgcodecs.h  imgcodecs.hxx  imgproc.h  imgproc.hxx  openHL.h  openHL.hxx
include/openHL/core/: base.h  base.hxx  bufferpool.hxx  check.hxx  core_c.h  fast_math.h  fast_math.hxx  hldef.h  hlstd.h  hlstd.hxx  hlstd_wrapper.hxx  mat.h  mat.hxx  mat.inl.hxx  matrix_operations.hxx  matx.hxx  matx.inl.hxx  private.hxx  saturate.hxx  softfloat.hxx  traits.hxx  types.hxx  types_c.h  utility.hxx
include/openHL/core/hal/: hal.hxx  interface.h  intrin.hxx
include/openHL/core/utils/: buffer_area.private.hxx  logger.hxx
include/openHL/imgproc/: imgproc_c.h  types_c.h
include/openHL/imgproc/hal/: hal.hxx
modules/: CMakeLists.txt
modules/core/: CMakeLists.txt  alloc.cxx  arithm.cxx  arithm.dispatch.cxx  arithm.simd.hxx  buffer_area.cxx  bufferpool.impl.hxx  convert.dispatch.c  convert.dispatch.cxx  convert.simd.h  convert.simd.hxx  convert_scale.dispatch.c  convert_scale.dispatch.cxx  convert_scale.simd.h  convert_scale.simd.hxx  copy.cxx  lapack.cxx  mat.c  matrix.cxx  matrix_decomp.cxx  matrix_iterator.cxx  matrix_transform.cxx  minmax.cxx  norm.cxx  parallel.cxx  precomp.h  precomp.hxx  saturate.h  softfloat.cxx  split.dispatch.c  split.dispatch.cxx  split.simd.h  split.simd.hxx  stat.dispatch.cxx  stat.simd.hxx  system.cxx  tables.cxx  umatrix.cxx
modules/imgcodecs/: CMakeLists.txt  bitstrm.cxx  bitstrm.hxx  grfmt_base.cxx  grfmt_base.hxx  grfmt_bmp.c  grfmt_bmp.cxx  grfmt_bmp.h  grfmt_bmp.hxx  grfmts.hxx  loadsave.c  loadsave.cxx  precomp.h  precomp.hxx  utils.c  utils.cxx  utils.h  utils.hxx
modules/imgproc/: CMakeLists.txt  blur.c  box_filter.dispatch.cxx  box_filter.simd.hxx  color.c  color.cxx  color.h  color.hxx  color.simd_helpers.h  color.simd_helpers.hxx  color_rgb.dispatch.c  color_rgb.dispatch.cxx  color_rgb.simd.h  color_rgb.simd.hxx  contour.cxx  edge_detection.cxx  filter.dispatch.cxx  filter.simd.hxx  filterengine.hxx  fixedpoint.inl.hxx  histogram.c  histogram.cxx  hough.cxx  imgwarp.cxx  median_blur.dispatch.cxx  median_blur.simd.hxx  norm.c  precomp.h  precomp.hxx  region.cxx  region_tag.cxx  resize.cxx  tables.cxx  thresh.cxx  transfer.cxx
